# drf_site

./: README.md  docker-compose.yml  global_settings.py  logger.py
.github/workflows/: linters_execution.yml
django_site/: Dockerfile  entrypoint.sh  logger.py  logging.yaml  manage.py  pyproject.toml
django_site/django_site/: asgi.py  settings.py  urls.py  wsgi.py
